; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_mr_tcam.c_mlxsw_sp1_mr_tcam_region_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_mr_tcam.c_mlxsw_sp1_mr_tcam_region_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp1_mr_tcam_region = type { i32, %struct.mlxsw_sp* }
%struct.mlxsw_sp = type { i32 }

@MLXSW_REG_RTAR_LEN = common dso_local global i32 0, align 4
@MLXSW_REG_RTAR_OP_DEALLOCATE = common dso_local global i32 0, align 4
@rtar = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sp1_mr_tcam_region*)* @mlxsw_sp1_mr_tcam_region_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp1_mr_tcam_region_free(%struct.mlxsw_sp1_mr_tcam_region* %0) #0 {
  %2 = alloca %struct.mlxsw_sp1_mr_tcam_region*, align 8
  %3 = alloca %struct.mlxsw_sp*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store %struct.mlxsw_sp1_mr_tcam_region* %0, %struct.mlxsw_sp1_mr_tcam_region** %2, align 8
  %6 = load %struct.mlxsw_sp1_mr_tcam_region*, %struct.mlxsw_sp1_mr_tcam_region** %2, align 8
  %7 = getelementptr inbounds %struct.mlxsw_sp1_mr_tcam_region, %struct.mlxsw_sp1_mr_tcam_region* %6, i32 0, i32 1
  %8 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %7, align 8
  store %struct.mlxsw_sp* %8, %struct.mlxsw_sp** %3, align 8
  %9 = load i32, i32* @MLXSW_REG_RTAR_LEN, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %4, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %5, align 8
  %13 = load i32, i32* @MLXSW_REG_RTAR_OP_DEALLOCATE, align 4
  %14 = load %struct.mlxsw_sp1_mr_tcam_region*, %struct.mlxsw_sp1_mr_tcam_region** %2, align 8
  %15 = getelementptr inbounds %struct.mlxsw_sp1_mr_tcam_region, %struct.mlxsw_sp1_mr_tcam_region* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @mlxsw_reg_rtar_pack(i8* %12, i32 %13, i32 %16, i32 0)
  %18 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %3, align 8
  %19 = getelementptr inbounds %struct.mlxsw_sp, %struct.mlxsw_sp* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @rtar, align 4
  %22 = call i32 @MLXSW_REG(i32 %21)
  %23 = call i32 @mlxsw_reg_write(i32 %20, i32 %22, i8* %12)
  %24 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %24)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @mlxsw_reg_rtar_pack(i8*, i32, i32, i32) #2

declare dso_local i32 @mlxsw_reg_write(i32, i32, i8*) #2

declare dso_local i32 @MLXSW_REG(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
